--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=%REACT_APP_GTM_ID%"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', '%REACT_APP_GTM_ID%');
+    </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Swiftdle"
+      content="%REACT_APP_META_DESCRIPTION%"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -21,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Swiftdle</title>
+    <title>%REACT_APP_TITLE%</title>
   </head>
   <body class="bg-slate-100 text-neutral-800 p-4">
     <noscript>You need to enable JavaScript to run this app.</noscript>
