chore: line height

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     -->
     <title>%REACT_APP_TITLE%</title>
   </head>
-  <body class="bg-slate-100 text-neutral-800 p-4">
+  <body class="bg-slate-100 text-neutral-800 p-4 leading-5">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
