--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       };
     </script>
     <script>
-      const theme = window.localStorage.getItem('theme');
+      var theme = window.localStorage.getItem('theme');
       if(theme === 'dark' || theme === 'light') {
         document.documentElement.classList.add(theme);
       } else if(window.matchMedia('(prefers-color-scheme: dark)').matches) {
