--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,21 @@
     </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="%REACT_APP_META_DESCRIPTION%"
-    />
+    <meta name="description" content="%REACT_APP_META_DESCRIPTION%" />
+    <meta property="og:title" content="%REACT_APP_TITLE%" />
+    <meta property="og:url" content="%REACT_APP_URL%" />
+    <meta property="og:description" content="%REACT_APP_META_DESCRIPTION%" />
+    <meta property="og:image" content="%REACT_APP_URL%og-image-192x192.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="%REACT_APP_PINNED_TAB_COLOR%">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="msapplication-TileColor" content="%REACT_APP_TILE_COLOR%">
+    <meta name="theme-color" content="%REACT_APP_THEME_COLOR%">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
